--- a/src/ui/styles.css
+++ b/src/ui/styles.css
@@ -1112,6 +1112,8 @@ button.primary:hover:not(:disabled) {
   border: 1px solid var(--border);
   background: rgba(15, 23, 42, 0.45);
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .graph_toolbar .field > label {
@@ -1163,6 +1165,10 @@ button.primary:hover:not(:disabled) {
 .graph_wrap {
   position: relative;
   padding: 12px;
+  flex: 1 1 auto;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .graph_corner {
@@ -1385,8 +1391,9 @@ button.primary:hover:not(:disabled) {
 .graph_svg {
   display: block;
   width: 100%;
-  height: 560px;
+  height: 100%;
   min-width: 0;
+  min-height: 0;
   touch-action: none;
   user-select: none;
   cursor: grab;
@@ -1636,6 +1643,6 @@ button.primary:hover:not(:disabled) {
   }
 
   .graph_svg {
-    height: 460px;
+    height: 100%;
   }
 }
